# warlock-agents

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  ME.md  README.md  cloudbuild.yaml  core.py  main.py  pyproject.toml  resources.py
.github/workflows/: ci.yaml  sync_milestones.yaml
.private/: README.md
.private.template/: .env
.private.template/agents/: README.md  torque_overlay.md
.private.template/profiles/: README.md  operator_lore.md  operator_profile.md
.private/agents/: README.md
.private/profiles/: README.md
.profiles/.private/: README.md
.public/: README.md  warlock.md
.public/agents/: clutch.md  torque.md
.resources/: DEFINITION_OF_READY.md
.scripts/: deploy-remote.sh  install-agents.py  start-mcp.sh  stop-mcp.sh  sync-private-configs.sh
agents/: torque.md
config/: secrets.template.env
infra/: main.tf  outputs.tf  terraform.tfvars  variables.tf
python-app/: README.md  pyproject.toml  requirements.txt
python-app/scripts/: seed_github_data.py
python-app/src/worksbyworrell/warlock/: __init__.py  core.py  main.py  sync.py
python-app/src/worksbyworrell/warlock/agents/: __init__.py  base.py
python-app/src/worksbyworrell/warlock/resources/: profiles.py  skills.py
python-app/src/worksbyworrell/warlock/storage/: __init__.py  firestore_client.py
python-app/src/worksbyworrell/warlock/tools/: __init__.py  screening.py  youtrack.py
python-app/tests/: __init__.py  conftest.py  test_agents.py  test_storage.py  test_sync.py
python-app/tests/mock_data/: warlock_prime.json
src/warlock/: __init__.py  core.py  (+2 more)
(+8 files in other folders)
