[project]
name = "warlock-agents"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-cloud-firestore>=2.28.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "protobuf>=7.35.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"] # Error, Pyflakes, Isort (imports)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worksbyworrell"]
